src/explore-education-statistics-admin/src/pages/release/datablocks/components/chart/ChartLegendConfiguration.module.scss
@import '~govuk-frontend/dist/govuk/base';

.item {
  border-bottom: 1px solid govuk-colour('mid-grey');
  margin-bottom: govuk-spacing(4);
  margin-top: 3px;
  padding-bottom: govuk-spacing(2);
}

.configurationInput {
  align-items: center;
  display: flex;
  flex-shrink: 0;
  margin-right: govuk-spacing(6);

  label {
    margin: 0 govuk-spacing(2) 0 0;
  }

  select {
    min-width: 6em;
  }

  :global(.govuk-checkboxes__label) {
    margin: 0;
    max-width: none;
  }
}

.numberInput {
  composes: configurationInput;
  min-width: 140px;

  input {
    width: 5ch;
  }
}

.labelInput {
  composes: configurationInput;
  min-width: 200px;
}

.colourInput {
  composes: configurationInput;

  input {
    width: 100px;
  }
}

